--- a/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
+++ b/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,4 +1,4 @@
-<mat-table [dataSource]="dataSource">
+<mat-table [dataSource]="courses">
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef>Courses</mat-header-cell>
