--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -1,85 +1,69 @@
 <mat-card>
+  <mat-toolbar color="primary">Detalhes dos cursos</mat-toolbar>
   <mat-card-content>
-    <mat-toolbar color="primary">Detalhes dos cursos</mat-toolbar>
     <form [formGroup]="form" class="min-width">
       <mat-form-field class="full-width">
-        <input matInput placeholder="Nome" formControlName="name" #name />
-        <mat-hint align="end">{{ name.value.length }}/100</mat-hint>
-        <mat-error *ngIf="form.get('name')?.invalid">{{
-          formUtils.getErrorMessage(form, "name")
-        }}</mat-error>
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name" #name />
+        <mat-hint align="end">{{ name.value.length }} / 100</mat-hint>
+        <mat-error *ngIf="form.get('name')?.invalid">
+          {{ getErrorMessage('name') }}
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <mat-label>Categoria</mat-label>
+        <mat-label>Category</mat-label>
         <mat-select formControlName="category">
-          <mat-option value="Front-end">Front-end</mat-option>
-          <mat-option value="Back-end">Back-end</mat-option>
+          <mat-option value=""> </mat-option>
+          <mat-option value="Front-end">Front-End</mat-option>
+          <mat-option value="Back-end">Back-End</mat-option>
         </mat-select>
-        <mat-error *ngIf="form.get('name')?.invalid">{{
-          formUtils.getErrorMessage(form, "category")
+        <mat-error *ngIf="form.get('category')?.invalid">{{
+          getErrorMessage('category')
         }}</mat-error>
       </mat-form-field>
 
-      <mat-toolbar>
-        <span>Aulas</span>
-        <button mat-icon-button color="accent" (click)="addNewLesson()">
-          <mat-icon aria-label="Adicionar uma nova aula">add</mat-icon>
+      <mat-toolbar class="lessons-toolbar">
+        <span>Lessons</span>
+        <div class="fill-remaining-space"></div>
+        <button mat-icon-button color="accent" (click)="addLesson()">
+          <mat-icon aria-label="Add a New Lesson">add</mat-icon>
         </button>
       </mat-toolbar>
 
       <mat-error
-        *ngIf="formUtils.ifFormArrayRequired(form, 'lessons')"
-        class="form-array-error"
-        >Adicione apenas uma aula.</mat-error
-      >
+        *ngIf="formUtils.isFormArrayRequired(form, 'lessons')"
+        class="form-array-error">
+        At least one lesson is required.
+      </mat-error>
 
       <table
-        style="width: 100%"
+        class="full-width"
         formArrayName="lessons"
-        *ngFor="let lesson of getLessonsFormArray(); let i = index"
-      >
+        *ngFor="let lesson of getLessonFormArray(); let i = index">
         <tr [formGroupName]="i">
           <td style="width: 65%">
             <mat-form-field class="full-width">
-              <mat-label>Nome da Aula</mat-label>
+              <mat-label>Lesson Name</mat-label>
               <input matInput formControlName="name" />
-              <mat-error
-                *ngIf="getLessonsFormArray()[i].get('name')?.invalid"
-                class="form-array-error"
-                >{{
-                  formUtils.getFormArrayFieldErrorMessage(
-                    form,
-                    "lessons",
-                    "name",
-                    i
-                  )
-                }}</mat-error
-              >
+              <mat-error *ngIf="getLessonFormArray()[i].get('name')?.invalid">
+                {{ getLessonErrorMessage('name', i) }}
+              </mat-error>
             </mat-form-field>
           </td>
           <td style="width: 30%">
             <mat-form-field class="full-width">
               <mat-label>URL</mat-label>
-              <span matPrefix> https://www.youtube.com/</span>
-              <input matInput formControlName="youtubeURL" />
-              <mat-error
-                *ngIf="getLessonsFormArray()[i].get('youtubeURL')?.invalid"
-                class="form-array-error"
-                >{{
-                  formUtils.getFormArrayFieldErrorMessage(
-                    form,
-                    "lessons",
-                    "youtubeURL",
-                    i
-                  )
-                }}</mat-error
-              >
+              <span matPrefix>https://youtu.be/</span>
+              <input matInput formControlName="youtubeUrl" />
+              <mat-error *ngIf="getLessonFormArray()[i].get('youtubeUrl')?.invalid">
+                {{ getLessonErrorMessage('youtubeUrl', i) }}
+              </mat-error>
             </mat-form-field>
           </td>
           <td>
             <button mat-icon-button color="warn" (click)="removeLesson(i)">
-              <mat-icon aria-label="Excluir uma nova aula">delete</mat-icon>
+              <mat-icon aria-label="Remove Lesson">delete</mat-icon>
             </button>
           </td>
         </tr>
@@ -87,10 +71,12 @@
     </form>
   </mat-card-content>
 
-  <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="onSubmit()">
-      Salvar
+  <mat-card-actions class="actions-center">
+    <button mat-raised-button color="primary" (click)="onSubmit()" type="submit">
+      Save
     </button>
-    <button mat-raised-button (click)="onCancel()">Cancelar</button>
+    <button mat-raised-button (click)="onCancel()" class="btn-space" type="button">
+      Cancel
+    </button>
   </mat-card-actions>
 </mat-card>
