--- a/crud-angular/src/app/courses/containers/courses/courses.component.html
+++ b/crud-angular/src/app/courses/containers/courses/courses.component.html
@@ -1,32 +1,26 @@
-<mat-card>
-  <mat-card-content>
-    <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
+<mat-card appearance="outlined">
+  <mat-toolbar color="primary">Available Courses</mat-toolbar>
 
-    <div
-      class="mat-elevation-z8"
-      *ngIf="courses$ | async as coursePage; else loading"
-    >
-      <app-courses-list
-        [dataSource]="dataSource"
-        (add)="onAdd()"
-        (edit)="onEdit($event)"
-        (remove)="onRemove($event)"
+  <div class="mat-elevation-z8" *ngIf="courses$ | async as coursePage; else loading">
+    <app-courses-list
+      [courses]="coursePage.courses"
+      (add)="onAdd()"
+      (edit)="onEdit($event)"
+      (remove)="onRemove($event)"
       ></app-courses-list>
 
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 15]"
-        showFirstLastButtons
-        [length]="coursePage.totalElements"
-        [pageIndex]="pageIndex"
-        [pageSize]="pageSize"
-        (page)="refresh($event)"
-        aria-label="Select page of courses"
-      ></mat-paginator>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 15]"
+      showFirstLastButtons
+      [length]="coursePage.totalElements"
+      [pageIndex]="pageIndex"
+      [pageSize]="pageSize"
+      (page)="refresh($event)"
+      aria-label="Select page of courses"></mat-paginator>
+  </div>
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
     </div>
-    <ng-template #loading>
-      <div class="loading-spinner">
-        <mat-spinner></mat-spinner>
-      </div>
-    </ng-template>
-  </mat-card-content>
+  </ng-template>
 </mat-card>
